<resources>
    <string name="app_name">Attacker</string>

    <!-- Notification Related Strings -->
    <string name="notification_label">Attacker App Notification</string>
    <string name="notification_channel_name">Normal</string>
    <string name="notification_channel_id">com.attacker.app.normal</string>
    <string name="notification_title">Attacker App Notification</string>
    <string name="notification_channel_desc">Displays notification from com.attacker.app</string>

    <string name="persistent_channel_id">com.attacker.app.persistent</string>
    <string name="persistent_notification_name">AttackerService</string>
    <string name="persistent_desc">For attacker service use</string>
    <string name="persistent_title">Attack Service Notification</string>

    <!-- StrandHogg v2 Attack -->
    <string name="distraction_label"><u>Distraction Activity</u></string>
    <string name="malicious_message">StrandHogg v2 Hijack Successful!</string>

    <!-- openCloud Attack -->
    <string name="opencloud_title_label">OpenCloud DB Exploit</string>
    <string name="oc_blind_sql_btn">Blind SQL Exploit</string>
    <string name="oc_query_btn">Query</string>
    <string name="oc_insert_btn">Insert Data</string>
    <string name="oc_delete_btn">Delete Data</string>
    <string name="delete_id_label">Delete Id</string>

</resources>